--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -23,9 +23,11 @@
     {{#if storage}}<link rel="stylesheet" href="/css/storage.css">{{/if}}
     {{#if search}}<link rel="stylesheet" href="/css/search.css">{{/if}}
 
+    {{#if clerk}}<link rel="stylesheet" href="/css/clerk.css">{{/if}}
+    {{#if amenu}}<link rel="stylesheet" href="/css/amenu.css">{{/if}}
+    {{#if anews}}<link rel="stylesheet" href="/css/anews.css">{{/if}}
+    {{#if acontact}}<link rel="stylesheet" href="/css/acontact.css">{{/if}}
 
-    
-    {{#if admin}}<link rel="stylesheet" href="/css/admin.css">{{/if}}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="/javascript/app.js"></script>
