--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -27,7 +27,8 @@
   bottom: 10px;
   transform: translate(-50%);
   text-align: center;
-  font-size: 15px; }
+  font-size: 15px;
+  width: 100%; }
 
 #login-form p a {
   color: #D3232D;
@@ -64,3 +65,17 @@
 
 #login-form form > input.good {
   border: darkgreen solid 2px; }
+
+@media screen and (max-width: 992px) {
+  #login-form {
+    left: 50%;
+    width: 50%; } }
+
+@media screen and (max-width: 768px) {
+  #login {
+    top: 60px; } }
+
+@media screen and (max-width: 660px) {
+  #login-form {
+    width: 80%;
+    padding: 20px; } }
