--- a/src/resources/scss/login.scss
+++ b/src/resources/scss/login.scss
@@ -31,6 +31,7 @@
     transform: translate(-50%);
     text-align: center;
     font-size: 15px;
+    width: 100%;
 }
 #login-form p a {
     color: $main-color;
@@ -67,4 +68,22 @@
 }
 #login-form form > input.good {
     border: darkgreen solid 2px;
+}
+
+@media screen and (max-width: 992px) {
+    #login-form {
+        left: 50%;
+        width: 50%;
+    }
+}
+@media screen and (max-width: 768px) {
+    #login {
+        top: 60px;
+    }
+}
+@media screen and (max-width: 660px) {
+    #login-form {
+        width: 80%;
+        padding: 20px;
+    }
 }
