--- a/src/resources/views/partials/aheader.hbs
+++ b/src/resources/views/partials/aheader.hbs
@@ -6,15 +6,15 @@
 
     {{!-- Super navigation --}}
     <div id="nav">
-        <a href="/admin/" class="{{#if list}}active{{/if}}">CLERK</a>
-        <a href="/admin/menu" class="{{#if storage}}active{{/if}}">MENU</a>
-        <a href="/admin/news" class="{{#if storage}}active{{/if}}">NEWS</a>
-        <a href="/admin/contact" class="{{#if search}}active{{/if}}">CONTACT</a>
+        <a href="/admin/" class="{{#if clerk}}active{{/if}}">CLERK</a>
+        <a href="/admin/menu" class="{{#if amenu}}active{{/if}}">MENU</a>
+        <a href="/admin/news" class="{{#if anews}}active{{/if}}">NEWS</a>
+        <a href="/admin/contact" class="{{#if acontact}}active{{/if}}">CONTACT</a>
     </div>
 
     {{!-- Account --}}
     <div id="account">
-        <a>ONE SALTY TUNA</a>
+        <a>LOG OUT<form id="logout" action="/auth/logout" method="POST"><input type="submit" value="LOG OUT"></form></a>
     </div>
 
 </nav>
