--- a/src/resources/views/body/user/user.hbs
+++ b/src/resources/views/body/user/user.hbs
@@ -80,7 +80,7 @@
                 <h3>CHANGE PASSWORD</h3>
                 <form method="POST" action="changePassword" id="ch-password-form">
                     <input id="password" type="password" name="password" placeholder="Old password" onblur="passwordValidate()">
-                    <label for="password"></label>
+                    <label for="password">{{#if wrongPass}}Wrong password{{/if}}</label>
                     <input id="new-password" type="password" name="newPassword" placeholder="New password" onblur="newPasswordValidate()">
                     <label for="new-password"></label>
                     <input id="submit-password" type="password" placeholder="Submit new password" onblur="submitPasswordValidate()">
