--- a/src/resources/views/body/super/search.hbs
+++ b/src/resources/views/body/super/search.hbs
@@ -18,6 +18,7 @@
             <span>Order Status</span>
             <input type="radio" name="status" value="all" checked="checked">
             <input type="radio" name="status" value="in process">
+            <input type="radio" name="status" value="confirmed">
             <input type="radio" name="status" value="closed">
         </div>
         <input type="submit" value="SEARCH" onclick="searchBtn()">
