--- a/src/resources/scss/search.scss
+++ b/src/resources/scss/search.scss
@@ -46,6 +46,10 @@ section {
     content: 'In process';
     font-size: 15px;
 }
+#search-form input[value="confirmed"]::before {
+    content: 'Confirmed';
+    font-size: 15px;
+}
 #search-form input[value="closed"]::before {
     content: 'Closed';
     font-size: 15px;
