--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Images/logo.png">
+    <link rel="shortcut icon" href="/img/general/logo.png">
     <title>One Salty Tuna</title>
 
     <link rel="stylesheet" href="/css/app.css">
