--- a/src/resources/views/body/admin/contact.hbs
+++ b/src/resources/views/body/admin/contact.hbs
@@ -31,7 +31,7 @@
                     </div>
                     <div class="message">
                         <h3>Message</h3>
-                        <p>{{this.message}}jlksdfjg dlfjglsk lksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp  lksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp  lksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp lksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp  lksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp  lksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp vlksdfjg dlfjglsk lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp lskdfjg sdlkfjgsldjf sdlfjgldjf sdljgsdl;f sdlgjdlfkjg sdklfjgdsl;fjg sdfjgdslfjg s kdfjgldsfjg s;ldjf gejr giejr goijerp gjejgd j</p>
+                        <p>{{this.message}}</p>
                     </div>
                 </div>
             {{/each}}
