--- a/src/resources/views/body/admin/admin.hbs
+++ b/src/resources/views/body/admin/admin.hbs
@@ -6,10 +6,10 @@
 <section class="indent" id="add">
     <h2 class="heading">ADD NEW CLERK</h2>
     <form action="/admin/addClerk" method="POST" onchange="addAuth()">
-        <input type="hidden" name="supername" id="supername">
-        <input type="hidden" name="password">
         <input type="text" name="name" placeholder="Name">
         <input type="text" name="phone" placeholder="Phone">
+        <input type="text" name="supername" id="supername" readonly placeholder="Username (Auto fill)">
+        <input type="text" name="password" placeholder="Password (Auto fill)" readonly>
         <input type="submit" value="ADD">
     </form>
 </section>
